--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,12 +63,8 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:lucianostrika44@gmail.com" rel="me"><i class="far fa-envelope"></i></a></li>
-	        		<li><a href="https://github.com/strikingloo" rel="me"><i class="fab fa-github"></i></a></li>
-			        <li><a href="http://twitter.com/strikingloo" rel="me"><i class="fab fa-twitter"></i></a></li>
-			        <li><a href="http://dev.to/strikingloo" rel="me"><i class="fab fa-dev"></i></a></li>
-			        <li><a href="http://www.linkedin.com/in/luciano-strika" rel="me"><i class="fab fa-linkedin"></i></a></li>
-				<li><a href="https://www.medium.com/@StrikingLoo" rel="me"> <i class="fab fa-medium"></i> </a></li>
+	        		
+			        <li><a href="https://www.linkedin.com/in/sam-glover-853b80ab/" rel="me"><i class="fab fa-linkedin"></i></a></li>
 				</ul>
 				<p><i>Built with ❤️ by <a href="https://strikingloo.github.io/">Strikingloo</a>.</i></p>
 			</footer>
