--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="icon" type="image/png" href="/potted-plant-icon.png"/>
             <title>{{ page.title }}</title>
-			<link rel="canonical" href="https://strikingloo.github.io{{ page.url }}">
+			<link rel="canonical" href="https://sjglove41.github.io{{ page.url }}">
 			  <meta name="description" content="{% if page.description %}{{ page.description | strip | strip_newlines | truncate: 160 }}{% else %}{{ page.title }}{% endif %}">
   			<meta property="og:site_name" content="{{ page.title }}">
 
@@ -37,9 +37,9 @@
 
 		  	{% endif %}
 		  	{% if page.url == "/" %}
-  				<meta property="og:url" content="https://strikingloo.github.io">
+  				<meta property="og:url" content="https://sjglove41.github.io">
   			{% else %}
-  				<meta property="og:url" content="https://strikingloo.github.io{{ page.url }}">
+  				<meta property="og:url" content="https://sjglove41.github.io{{ page.url }}">
   			{% endif %}
   			<meta content="index,follow" name="robots"><!-- All Search Engines -->
   			<meta content="index,follow" name="googlebot"><!-- Google Specific -->
@@ -49,11 +49,8 @@
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/about">About</a></li>
-	        		<li><a href="/resources/Luciano_Strika.pdf">CV</a></li>
 	        		<li><a href="/wiki">Garden</a></li>
 	        		<li><a href="/blog">Blog</a></li>
-	        		<li><a href="https://www.medium.com/@StrikingLoo">Medium</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
