--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,13 @@
 			<!-- link rel="preconnect" href="https://fonts.gstatic.com" crossorigin -->
             <!-- link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet"-->
 			<link rel="stylesheet" type="text/css" href="/css/main-min.css">
-        	<!-- Global site tag (gtag.js) - Google Analytics -->
-			<script async src="https://www.googletagmanager.com/gtag/js?id=UA-52642322-5"></script>
+        	<!-- Google Tag Manager -->
+			<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+			new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+			j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+			'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+			})(window,document,'script','dataLayer','GTM-WWKJRQM');</script>
+			<!-- End Google Tag Manager -->
 
 			<script>
 			  window.dataLayer = window.dataLayer || [];
