--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,6 +49,7 @@
 	        		<li><a href="/">Home</a></li>
 	        		<li><a href="/wiki">Garden</a></li>
 	        		<li><a href="/blog">Blog</a></li>
+				<li><a href="/about">About</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
