--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 :root {
-  --bkg: #FFFDFB;
+  --bkg: #6699FF;
   --font-color: #24272B;
-  --header-anchor-color: ##FFCC66;
+  --header-anchor-color: #FFCC66;
   --anchor-hover-color: #c34;
   --wiki-bkg-color: #cfebfb;
   --wiki-bkg-color-hover: #E1F3FB;
