--- a/css/main.css
+++ b/css/main.css
@@ -3,8 +3,8 @@
   --font-color: #24272B;
   --header-anchor-color: #FFCC66;
   --anchor-hover-color: #c34;
-  --wiki-bkg-color: #cfebfb;
-  --wiki-bkg-color-hover: #E1F3FB;
+  --wiki-bkg-color: #6699FF;
+  --wiki-bkg-color-hover: #FFCC66;
 }
 
 body {
