--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
   --bkg: #FFFDFB;
   --font-color: #24272B;
   --header-anchor-color: #3394cc;
-  --anchor-hover-color: #3383C;
+  --anchor-hover-color: #33FF99;
   --wiki-bkg-color: #6699FF;
   --wiki-bkg-color-hover: #FFCC66;
 }
