--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 :root {
   --bkg: #FFFDFB;
   --font-color: #24272B;
-  --header-anchor-color: #3394cc;
+  --header-anchor-color: #80FFBF;
   --anchor-hover-color: #3399FF;
   --wiki-bkg-color: #6699FF;
   --wiki-bkg-color-hover: #FFCC66;
