--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,10 @@
     {% if site.github.is_project_page %}
       <p>Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
     {% endif %}
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+     	    		<ul>
+	        		
+			        <li><a href="https://www.linkedin.com/in/sam-glover-853b80ab/" rel="me"><i class="fab fa-linkedin"></i></a></li>
+				</ul>
     </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
   </body>
