--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,6 +43,7 @@
 	        		
 	<li><a href="https://www.linkedin.com/in/sam-glover-853b80ab/" rel="me"><i class="fab fa-linkedin"></i></a></li>
 	</ul>
+	    <p><i>Built by <a href="https://sjglove41.github.io/">Sam</a>.</i></p>
     </footer>
 	  
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
