--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
       </section>
     </div>
     <footer>
-	    <p><i>Built by <a href="https://sjglove41.github.io/">Sam</a>.</i></p>
+	    <p><i>Built by <a href="https://www.linkedin.com/in/sam-glover-853b80ab/">Sam</a>.</i></p>
     </footer>
 	  
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
