--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,7 @@
     </div>
     <footer>
 	    <p><i>Built by <a href="https://www.linkedin.com/in/sam-glover-853b80ab/">Sam</a>.</i></p>
+	    <li><a href="mailto:sam@samglover.me" rel="me"><i class="far fa-envelope"></i></a></li>
     </footer>
 	  
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
