--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,6 +43,10 @@
 	    <li><a href="mailto:sam@samglover.me" rel="me"><i class="far fa-envelope"></i></a></li>
     </footer>
 	  
+	<script defer src="https://kit.fontawesome.com/695103c91f.js" crossorigin="anonymous"></script>
+			{% if page.uses_mathjax %}
+			<script defer src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+			{% endif %}
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
   </body>
 </html>
