--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
       </section>
     </div>
     <footer>
-	    <li><p>Built by <a href="https://www.linkedin.com/in/sam-glover-853b80ab/">Sam</a>.</p></li>
+	    <li>Built by <a href="https://www.linkedin.com/in/sam-glover-853b80ab/">Sam</a></li>
 	    <li><a href="mailto:sam@samglover.me" rel="me"><i class="far fa-envelope"></i></a></li>
     </footer>
 	  
