--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,10 +19,14 @@
   <body>
     <div class="wrapper">
       <header {% unless site.description or site.github.project_tagline %} class="without-description" {% endunless %}>
+	      <nav>
+		      <ul>
         	        	<li><a href="/">Home</a></li>
 		        	<li><a href="/about">About</a></li>
 	        		<li><a href="/wiki">Garden</a></li>
 	        		<li><a href="/blog">Blog</a></li>
+		      </ul>
+	      </nav>
 	      <h1>{{ site.title | default: site.github.repository_name }}</h1>
         {% if site.description or site.github.project_tagline %}
           <p>{{ site.description | default: site.github.project_tagline }}</p>
