--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
+    <link rel="icon" type="image/png" href="/potted-plant-icon.png"/>
+            <title>{{ page.title }}</title>
 {% seo %}
 
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
