--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" type="image/png" href="/potted-plant-icon.png"/>
+    <link rel="icon" type="image/png" href="/resources/mag-glass.png"/>
             <title>{{ page.title }}</title>
 {% seo %}
 
